--- a/Admin/Assets/Css/style.css
+++ b/Admin/Assets/Css/style.css
@@ -9,3 +9,13 @@
     background-repeat: no-repeat;
     height: 100vh;
 }
+
+.heading_{
+    color: var(--color-text);
+}
+
+.box_test {
+    background-color: #fff;
+    border: 1px solid #d4d2d2;
+    border-radius: 5px;
+}
